[metadata]
name = meshcat_utils
version = 0.0.1
description = Some utilities to use Meshcat with Pinocchio.
long_description = file: README.md


[flake8]
ignore = E501, W504
exclude = .git,__pycache__,docs

[options]
zip_safe = False
packages = meshcat_utils
install_requires =
    meshcat
    imageio
    numpy
include_package_data = True

