[metadata]
name = pin-meshcat-utils
version = 0.0.1
description = Some utilities to use Meshcat with Pinocchio.
long_description = file: README.md
author = Wilson Jallet
author_email = wilson.jallet@inria.fr


[flake8]
ignore = E501, W504
exclude = .git,__pycache__,docs

[options]
zip_safe = False
packages = meshcat_utils
install_requires =
    meshcat @ git+https://github.com/ManifoldFR/meshcat-python@feat/set-capture-resolution
    numpy
    tqdm
    # pin # install separately please
include_package_data = True
