[metadata]
name = pin-meshcat-utils
version = 0.1.0
description = Some utilities to use Meshcat with Pinocchio.
long_description = file: README.md
author = Wilson Jallet
author_email = wilson.jallet@inria.fr


[flake8]
ignore = E501, W504, E203
exclude = .git,__pycache__,docs
per-file-ignores =
    meshcat_utils/__init__.py:F401,F403

[options]
zip_safe = False
packages = meshcat_utils
install_requires =
    meshcat @ git+https://github.com/inria-paris-robotic-lab/meshcat-python
    numpy>=1.20.0
    tqdm>=4.24.0
    imageio[ffmpeg]>=2.13.4
    # pin # install separately please, installing through pip *might* break your environment
include_package_data = True
